connect database to app
- add basic REST method to query products
